<resources>
    <string name="facebook_app_id">605073649904239</string>
    <string name="fb_login_protocol_scheme">fb605073649904239</string>
    <string name="app_name">Geo Challenge II</string>
    <string name="geo_question_type_outlines">Which Country Is This?</string>
    <string name="geo_question_type_flags">Which Country Has This Flag?</string>
    <string name="geo_question_type_capitals">Which is the capital?</string>
    <string name="geo_question_type_outline_to_flag">Which one is the correct flag</string>
    <string name="loading">Loading</string>
    <string name="skills">Skills</string>
    <string name="mainMenuLevel">Level: </string>
    <string name="connectionError">There has been a connection error, try to log in again later.</string>
    <string name="networkError">Please connect to a network, then try again!</string>
    <string name="connectionError2">Connection error, please try again!</string>
    <string name="startGameOf">Start a game of</string>
    <string name="easy"> Easy </string>
    <string name="normal">Normal</string>
    <string name="hard"> Hard </string>
    <string name="start">Start</string>
    <string name="flags">Flags</string>
    <string name="maps">Maps</string>
    <string name="capitals">Capitals</string>
    <string name="mapToFlag">Map\'s Flag</string>
    <string name="landmarks">Landmarks</string>
    <string name="skill_points">Skill Points:</string>
    <string name="confirm">Confirm</string>
    <string name="shield_starting_description">Shields you from the next wrong answer for the next few turns</string>
    <string name="shield_description_part1">Shields you from the next wrong answer for the next</string>
    <string name="shield_description_part2">turn</string>
    <string name="shield_description_part3">Charges:</string>
    <string name="skip_starting_description">Skip a question without losing your streak bonus.</string>
    <string name="skip_description_part1">bonus points</string>
    <string name="skip_description_part2">Charges:</string>
    <string name="fifty_fifty_starting_description">Removes the extra options leaving you with a 50/50 choice.</string>
    <string name="fifty_fifty_description_part1">bonus points</string>
    <string name="fifty_fifty_description_part2">Charges:</string>
    <string name="extra_time_starting_description">Permanently increase the total available time at the beginning of a round.</string>
    <string name="extra_time_description_part1">seconds</string>
    <string name="freeze_time_starting_description">Stops the timer for the next few seconds</string>
    <string name="freeze_time_description_part1">Stops the timer for the next</string>
    <string name="freeze_time_description_part2">seconds.</string>
    <string name="freeze_time_description_part3">Charges:</string>
    <string name="round_completed">Round Completed!</string>
    <string name="game_win_next">NEXT</string>
    <string name="skill_point">+ %1$d skill point</string>
    <string name="completion_bonus">Correct answers:</string>
    <string name="time_left">Time left:</string>
    <string name="streak_bonus">Streak Bonus:</string>
    <string name="total">Total:</string>
    <string name="high_score">High Score!</string>
    <string name="finish">Finish</string>
    <string name="time_s_up">Time\'s Up!</string>
    <string name="try_again">Try Again?</string>
    <string name="retry">Retry</string>
    <string name="question">question:</string>
    <string name="bonus">Bonus:</string>
    <string name="description_turns">Duration (turns)</string>
    <string name="description_duration">Duration (sec)</string>
    <string name="description_extra_time">Extra time (sec)</string>
    <string name="description_charges">Charges</string>
    <string name="description_bonus">Usage Bonus</string>
    <string name="description_power_name_skip">Skip Question</string>
    <string name="description_power_name_fifty_fifty">Fifty-Fifty</string>
    <string name="description_power_name_shield">Shield</string>
    <string name="description_power_name_freeze_time">Freeze Time</string>
    <string name="description_power_name_extra_time">Extra Time</string>
    <string name="bonusButton">Bonus</string>
    <string name="select_language">Select Language</string>
    <string name="sec">sec</string>
    <string name="menu">Menu</string>
    <string name="language">Language</string>
    <string name="reset_game_progress">Reset game progress</string>
    <string name="reset_progress">Reset progress</string>
    <string name="reset_progress_warning">WARNING! You are about to reset all your game progress. You will lose all levels, skills and xp. Are you sure you want to reset?</string>
    <string name="logout">Logout</string>
    <string name="musicOn">Music On</string>
    <string name="musicOff">Music Off</string>
    <string name="soundOn">Sound On</string>
    <string name="soundOff">Sound Off</string>
    <string name="xpBoost">Xp Boost</string>
    <string name="xpBoostDescription">Watch a short video to double the XP you will get from the games you start in the next 5 minutes!</string>
    <string name="watchVideoPrompt">Watch!</string>
    <string name="xpBoostEnabledDescription">Your XP boost is on! You will gain double experience from your games until it runs out!</string>
    <string name="gameStartXpBoostEnabled">(XP Boost Active)</string>
    <string name="gameEndXpBoostEnabled">Bonus XP:\u0020</string>
    <string name="variationTextDescription">\u0020Text buttons\u0020</string>
    <string name="variationMapDescription">\u0020Find on map\u0020</string>
    <string name="variationImageButtonDescription">\u0020Image buttons\u0020</string>
    <string name="difficulty">Difficulty:</string>
    <string name="variation">Variation:</string>
    <string name="sign_in">Sign In</string>
    <string name="credits">Credits</string>
    <string name="termsAndConditions">Privacy Policy</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="creditsTxt">
        Vectors designed by Freepik.com\n\n
        Music and sounds by playonloop.com, noiseforfun.com, freesound.org\n\n
        Background City vector created by freepik - www.freepik.com
        \n\n
        Silly Intro by Alexander Nakarada | https://www.serpentsoundstudios.com
        \n
        Music promoted by https://www.chosic.com/free-music/
        \n
        Attribution 4.0 International (CC BY 4.0)
        https://creativecommons.org/licenses/by/4.0/
    </string>
    <string name="china">China</string>
    <string name="india">India</string>
    <string name="united_states">United States</string>
    <string name="indonesia">Indonesia</string>
    <string name="brazil">Brazil</string>
    <string name="pakistan">Pakistan</string>
    <string name="nigeria">Nigeria</string>
    <string name="bangladesh">Bangladesh</string>
    <string name="russia">Russia</string>
    <string name="mexico">Mexico</string>
    <string name="japan">Japan</string>
    <string name="ethiopia">Ethiopia</string>
    <string name="philippines">Philippines</string>
    <string name="vietnam">Vietnam</string>
    <string name="egypt">Egypt</string>
    <string name="dr_congo">Dr congo</string>
    <string name="iran">Iran</string>
    <string name="germany">Germany</string>
    <string name="turkey">Turkey</string>
    <string name="thailand">Thailand</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="france">France</string>
    <string name="italy">Italy</string>
    <string name="tanzania">Tanzania</string>
    <string name="south_africa">South Africa</string>
    <string name="myanmar">Myanmar</string>
    <string name="south_korea">South Korea</string>
    <string name="colombia">Colombia</string>
    <string name="kenya">Kenya</string>
    <string name="spain">Spain</string>
    <string name="ukraine">Ukraine</string>
    <string name="argentina">Argentina</string>
    <string name="sudan">Sudan</string>
    <string name="uganda">Uganda</string>
    <string name="algeria">Algeria</string>
    <string name="iraq">Iraq</string>
    <string name="poland">Poland</string>
    <string name="canada">Canada</string>
    <string name="morocco">Morocco</string>
    <string name="afghanistan">Afghanistan</string>
    <string name="saudi_arabia">Saudi Arabia</string>
    <string name="peru">Peru</string>
    <string name="venezuela">Venezuela</string>
    <string name="malaysia">Malaysia</string>
    <string name="uzbekistan">Uzbekistan</string>
    <string name="mozambique">Mozambique</string>
    <string name="nepal">Nepal</string>
    <string name="ghana">Ghana</string>
    <string name="yemen">Yemen</string>
    <string name="angola">Angola</string>
    <string name="madagascar">Madagascar</string>
    <string name="north_korea">North Korea</string>
    <string name="australia">Australia</string>
    <string name="cameroon">Cameroon</string>
    <string name="ivory_coast">Ivory Coast</string>
    <string name="niger">Niger</string>
    <string name="sri_lanka">Sri Lanka</string>
    <string name="romania">Romania</string>
    <string name="burkina_faso">Burkina Faso</string>
    <string name="syria">Syria</string>
    <string name="beijing">Beijing</string>
    <string name="new_delhi">New Delhi</string>
    <string name="washington">Washington</string>
    <string name="jakarta">Jakarta</string>
    <string name="brasilia">Brasilia</string>
    <string name="islamabad">Islamabad</string>
    <string name="abuja">Abuja</string>
    <string name="dhaka">Dhaka</string>
    <string name="moscow">Moscow</string>
    <string name="mexico_city">Mexico City</string>
    <string name="tokyo">Tokyo</string>
    <string name="addis_ababa">Addis Ababa</string>
    <string name="maynila">Maynila</string>
    <string name="hanoi">Hanoi</string>
    <string name="cairo">Cairo</string>
    <string name="kinshasa">Kinshasa</string>
    <string name="tehran">Tehran</string>
    <string name="berlin">Berlin</string>
    <string name="ankara">Ankara</string>
    <string name="bangkok">Bangkok</string>
    <string name="london">London</string>
    <string name="paris">Paris</string>
    <string name="rome">Rome</string>
    <string name="dodoma">Dodoma</string>
    <string name="pretoria">Pretoria</string>
    <string name="naypyidaw">Naypyidaw</string>
    <string name="seoul">Seoul</string>
    <string name="bogota">Bogota</string>
    <string name="nairobi">Nairobi</string>
    <string name="madrid">Madrid</string>
    <string name="kiev">Kiev</string>
    <string name="buenos_aires">Buenos Aires</string>
    <string name="khartoum">Khartoum</string>
    <string name="kampala">Kampala</string>
    <string name="algiers">Algiers</string>
    <string name="baghdad">Baghdad</string>
    <string name="warsaw">Warsaw</string>
    <string name="ottawa">Ottawa</string>
    <string name="rabat">Rabat</string>
    <string name="kabul">Kabul</string>
    <string name="riyadh">Riyadh</string>
    <string name="lima">Lima</string>
    <string name="caracas">Caracas</string>
    <string name="kuala_lumpur">Kuala Lumpur</string>
    <string name="tashkent">Tashkent</string>
    <string name="maputo">Maputo</string>
    <string name="kathmandu">Kathmandu</string>
    <string name="accra">Accra</string>
    <string name="sana_a">Sana\'a</string>
    <string name="luanda">Luanda</string>
    <string name="antananarivo">Antananarivo</string>
    <string name="pyongyang">Pyongyang</string>
    <string name="canberra">Canberra</string>
    <string name="yaounde">Yaounde</string>
    <string name="yamoussoukro">Yamoussoukro</string>
    <string name="niamey">Niamey</string>
    <string name="sri_jayawardenepura_kotte">Sri Jayawardenepura Kotte</string>
    <string name="bucharest">Bucharest</string>
    <string name="ouagadougou">Ouagadougou</string>
    <string name="volume">volume</string>
</resources>