<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/test_menu_background">

    <Button
        android:id="@+id/close_skill_upgrade_menu"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="8dp"
        android:background="@drawable/close_button_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/menuText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/normal"
        android:text="@string/menu"
        android:textColor="#333"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line_separator3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#333"
        app:layout_constraintEnd_toEndOf="@+id/menuText"
        app:layout_constraintStart_toStartOf="@+id/menuText"
        app:layout_constraintTop_toBottomOf="@+id/menuText" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:overScrollMode="never"
        style="@style/settingsScrollbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_separator3">

        <android.support.constraint.ConstraintLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/languageBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/normal"
                android:text="@string/language"
                android:textStyle="bold"
                android:theme="@style/AppTheme.PrimaryColoredButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/volumeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAllCaps="true"
                android:fontFamily="@font/normal"
                android:textColor="#333"
                app:layout_constraintEnd_toEndOf="@+id/musicVolumeBar"
                app:layout_constraintStart_toStartOf="@+id/musicVolumeIcon"
                app:layout_constraintTop_toBottomOf="@+id/languageBtn"
                android:text="@string/volume" />


            <ImageView
                android:id="@+id/musicVolumeIcon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="28dp"
                android:src="@drawable/ic_music_volume_on"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/volumeText" />

            <SeekBar
                android:id="@+id/musicVolumeBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:theme="@style/settingsSeekBarColor"
                app:layout_constraintBottom_toBottomOf="@+id/musicVolumeIcon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/musicVolumeIcon"
                app:layout_constraintTop_toTopOf="@id/musicVolumeIcon" />

            <ImageView
                android:id="@+id/soundVolumeIcon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_sound_high_volume"
                app:layout_constraintEnd_toEndOf="@+id/musicVolumeIcon"
                app:layout_constraintTop_toBottomOf="@+id/musicVolumeIcon" />

            <SeekBar
                android:id="@+id/soundVolumeBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:theme="@style/settingsSeekBarColor"
                app:layout_constraintBottom_toBottomOf="@+id/soundVolumeIcon"
                app:layout_constraintEnd_toEndOf="@id/musicVolumeBar"
                app:layout_constraintStart_toStartOf="@id/musicVolumeBar"
                app:layout_constraintTop_toTopOf="@id/soundVolumeIcon" />

            <Button
                android:id="@+id/logOutBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/normal"
                android:text="@string/logout"
                android:textStyle="bold"
                android:theme="@style/AppTheme.PrimaryColoredButton"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/soundVolumeBar" />

            <Button
                android:id="@+id/resetProgressBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/normal"
                android:text="@string/reset_game_progress"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:theme="@style/AppTheme.PrimaryColoredButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logOutBtn" />

            <Button
                android:id="@+id/creditsBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/normal"
                android:text="@string/credits"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:theme="@style/AppTheme.PrimaryColoredButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/resetProgressBtn" />

            <Button
                android:id="@+id/termsAndConditionsBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/normal"
                android:text="@string/termsAndConditions"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:theme="@style/AppTheme.PrimaryColoredButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/creditsBtn" />

        </android.support.constraint.ConstraintLayout>


    </ScrollView>

</android.support.constraint.ConstraintLayout>